    * Fix the bug that Sys#getsockname method may allocate a wrong size of memory.
    * Fix the bug that Sys::Socket::Sockaddr#new method may allocate a wrong size of memory.
    * Fix the bug that Sys#accept method may allocate a wrong size of memory.
  [New Features]
    * Add Sys::Socket#sendto method.
    * Add Sys::Socket#recvfrom method.
  
  [New Features that Will Removed in The Nearly Future]
    * Add Sys::send_v2 method. This will replace Sys::send and will removed.
  
  [Future Changes with Imcompatible Changes]
    * Sys#send method will be replaced with Sys#send_v2.
  [Changes]
    * Allow the $addr of Sys::Socket#sendto method undef.
    
0.516 2024-05-27
  [New Features]
    * Add push method to Sys::Poll::PollfdArray class.
    * Add remove method to Sys::Poll::PollfdArray class.
    * Add capacity field to Sys::Poll::PollfdArray class.
    * Add $capacity optional argument to Sys::Poll::PollfdArray#new method.
    
0.515 2024-05-24
  [Bug Fix]
    * May fix the bug that Sys::IO#seekdir method does not work well.
  [Exception Message Changes]
    * Exception messages in native classes are improved.
  [New Features]
    * Add the seekdir method to Sys class.
  [Changes]
    * Sys#readdir method throws an exception if the directory stream is not defined or the directory stream is already closed.
    * Sys#closedir method throws an exception if the directory stream is not defined or the directory stream is already closed.
    * Sys#rewinddir method throws an exception if the directory stream is not defined or the directory stream is already closed.
    * Sys#seekdir method throws an exception if the directory stream is not defined or the directory stream is already closed.
    * Sys#telldir method throws an exception if the directory stream is not defined or the directory stream is already closed.
    
    * Sys#fileno method throws an exception if the stream is not defined or the stream is already closed.