@@ -7,6 +7,7 @@
   [New Features]
     * Add Sys::Socket#sendto method.
     * Add Sys::Socket#recvfrom method.
+    * Add Sys#recvfrom method.
   
   [New Features that Will Removed in The Nearly Future]
     * Add Sys::send_v2 method. This will replace Sys::send and will removed.
